--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   english_words: ^3.1.3
   http: ^0.12.0
+  google_sign_in:
+  firebase_auth:
 
 dev_dependencies:
   flutter_test:
