--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
   cupertino_icons: ^0.1.2
   english_words: ^3.1.3
   http: ^0.12.0
+  collection: 1.14.11
+  meta: 1.1.6
+  typed_data: 1.1.6
+  vector_math: 2.0.8
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +59,7 @@ flutter:
     - data_repo/img/social/linkedin.png
     - data_repo/img/social/twitter.png
     - data_repo/starwars_data.json
+    - assets/flutter-mark-square-64.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
 
